--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 		</div>
 		<div class="row justify-content-center p-4" id="sponsors">
 			<div class="col-12">
-				<h3 style="color: #333;">Sponsorlar</h3>
+				<h3 style="color: #333;">Sponsorlarımız</h3>
 				<div class="row justify-content-center lightsegment">
 					<div class="col-3 col-md-3 info">
 						<img src="/assets/img/arti_bilgisayar.png" style="max-width: 100%; margin-top: 80px;">
